styles/content.styl
/* ... */
            color orangered

        &.dislikes, {night} &.dislikes
            color periwinkle
            
/*** Post Entry Area ***
 *  The following block of code converts the usual reddit `.thing` into
 *  a more neatly-designed two-line list element. If you don't want this
 *  to happen, remove this block and you _should_ be okay. No promises.
 *  (I have left some font sizing in here because it's a little specific
 *  to this use-case, as well. Be warned.)
 *
 *  I also had a lot of trouble with getting this to work, and as a
 *  result, have __no idea__ how this actually works.
 *
 *  Oops.
 */

    .link
        .title
            // `table` prevents full-width links
            display table

        .entry
            &>.title, .flat-list.buttons
                display inline
                
            &>.title
                margin 0
                a
                    .listing-page &
                        // Disable the link cut-off on anything but the
                        // listing pages. It's pointless to cut it off
                        // in the comments.
                        overflow hidden
                        text-overflow ellipsis
                        white-space nowrap
                    if fonts[0] = "San Francisco Display"
                        // San Francisco does not yet have an adequete
                        // 300-weighted variant. If it's being used,
                        // fall back to Helvetica Neue
                        font-family "Helvetica Neue", Roboto, Arial, sans-serif
                        font-size 1.2rem
                        font-weight 300
                    else
                        font(1.2rem, 300)
                    
                .domain
                    font-size 0
                    a
                        position relative
                        margin-right 0.2rem
                        
                        // `text-top` happens to put the element below
                        // the position we want, by its height. So push
                        // it up by `0.75rem` and it works on everything
                        bottom 0.75rem
                        vertical-align text-top
                        font(0.75rem, 400)
                            
    .approval-checkmark
        margin-bottom -2px
                        
    .tagline
        font-size 0.75rem
        a:hover
            text-decoration none
        
        if image_flairs
            // This stuff breaks when there's image flairs, so fix it
            > *
                vertical-align middle
        
    .flat-list.buttons
        font-size 0.75rem
        .listing-page & .first
            position relative
            float left
            bottom -1px
            
/*** Advertisements ***/
    .organic-listing // Ironic
        border none !important
        background-color promoted_link_background !important

/*** Formatting ***/
    // Link title
    .thing .title
        color primary
        &:visited, /.thing.visited .title
            // We have to blend colours here, because of :visited's
            // security requirements - no transparency allowed
            nightadjust 'color' blend(secondary_text, backing) blend(secondary_text_dark, backing_dark)
            &:hover
                color primary
        &:hover
            color darken(primary, 30%)
                
    .thing .entry
        border-left 0px solid primary
        transition padding 0.2s ease, border 0.2s ease
        /.tagline, .flat-list.buttons li a
            font(0.75rem, 400)
            
        /.tagline, .flat-list.buttons a, .domain a, .domain a:hover::after
            nightadjust 'color' secondary_text #fff

        .flat-list.buttons a:hover, .domain a:hover
            color primary
            text-decoration none
    
    // Just on the link display (not for comments)
    .link .tagline   
        time
            nightadjust 'color' secondary_text #fff
        
        // Confusion: The time is displayed in `.live-timestamp`, but
        // the asterisk for an edited post is displayed in 
        // `.edited-timestamp`. A post which hasn't been edited shows
        // neither of them.
        //
        // To add to the annoyance, reddit doesn't always apply `.live-
        // timestamp` to the elements, so the best shot is to apply our
        // style to the _last_ `time` element in a series. Remember, we
        // ultimately want the dash only on the last element in our time
        // display—separating the asterisk is useless and dirty.
        > time:last-of-type
            &::after
                content " -"
                margin-right 0.2rem
    
    .link .entry  
        // Don't show the domain for self posts, that's obvious
        .domain a[href^="/r/"]
            display none
        
        .domain a
            text-decoration none
            &::after
                content " -"
    
    // `tagline` = Username
    .link .tagline
        display inline-block
        if image_flairs
            position relative
            line-height 18px
            top -1px
        else
            height 18px
            vertical-align middle
        font-size 0
        time, /a.author
            font-size 0.75rem
            
        a.subreddit
            margin-left 0.4rem
            font-weight 400
    
    {night} // I HATE NIGHT MODE
/* ... */

